force-app/main/default/objects/HistoryTracking__c/HistoryTracking__c.object-meta.xml
<CustomObject>
    <label>History Tracking</label>
    <nameField>
        <displayFormat>History-{000000}</displayFormat>
        <label>Tracking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>History Trackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>