force-app/main/default/objects/HistoryTracking__c/fields/NewValue__c.field-meta.xml
<CustomField>
    <fullName>NewValue__c</fullName>
    <label>New Value</label>
    <type>TextArea</type>
</CustomField>