force-app/main/default/objects/HistoryTracking__c/fields/OldValue__c.field-meta.xml
<CustomField>
    <fullName>OldValue__c</fullName>
    <label>Old Value</label>
    <type>TextArea</type>
</CustomField>