force-app/main/default/objects/HistoryTracking__c/fields/RelatedObjectName__c.field-meta.xml
<CustomField>
    <fullName>RelatedObjectName__c</fullName>
    <label>Related Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>