force-app/main/default/objects/HistoryTracking__c/fields/RelatedRecordId__c.field-meta.xml
<CustomField>
    <fullName>RelatedRecordId__c</fullName>
    <label>Related Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>