force-app/main/default/objects/HistoryTracking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FieldName__c</columns>
    <columns>OldValue__c</columns>
    <columns>NewValue__c</columns>
    <columns>User__c</columns>
    <columns>RelatedObjectName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>